--- a/index.html
+++ b/index.html
@@ -19,9 +19,28 @@ header h1{margin:0;font-size:22px}
 .item,.cocktail-name{display:flex;justify-content:space-between;padding:6px 0}
 .cocktail{border-bottom:1px dashed #334155;padding:6px 0}
 .cocktail-desc{display:none;font-size:13px;color:#cbd5f5;margin-top:4px}
-</style>
+
+/* AGE GATE */
+.age-overlay{position:fixed;inset:0;background:#020617;display:flex;align-items:center;justify-content:center;z-index:9999}
+.age-box{text-align:center;max-width:320px;padding:20px}
+.age-box h2{margin-bottom:10px}
+.age-box p{font-size:14px;color:#cbd5f5}
+.age-box button{margin-top:10px;width:100%;padding:10px;border:none;border-radius:8px;font-size:16px}
+.age-yes{background:#16a34a;color:#fff}
+.age-no{background:#991b1b;color:#fff} </style>
+
 </head>
 <body>
+
+<div id="ageGate" class="age-overlay" style="display:none">
+  <div class="age-box">
+    <h2 id="ageTitle">21+ Only</h2>
+    <p id="ageText">You must be 21 years old or older to enter this site</p>
+    <button class="age-yes" onclick="confirmAge()" id="ageYes">Yes, I am 21+</button>
+    <button class="age-no" onclick="denyAge()" id="ageNo">No</button>
+  </div>
+</div>
+
 <header>
   <h1>Tiger Bar</h1>
   <div class="lang">
@@ -38,59 +57,28 @@ header h1{margin:0;font-size:22px}
 <script>
 let lang='en';
 const i18n={
- en:{free:'🎱 Free Billiard',map:'📍 Open in Google Maps',soft:'Soft Drinks',beer:'Beer',whiskey:'Whiskey',shots:'Shots',cocktails:'Cocktails (tap to see ingredients)'},
- ru:{free:'🎱 Бильярд бесплатно',map:'📍 Открыть в Google Maps',soft:'Безалкогольные напитки',beer:'Пиво',whiskey:'Виски и крепкий алкоголь',shots:'Шоты',cocktails:'Коктейли (нажмите для состава)'},
- th:{free:'🎱 เล่นพูลฟรี',map:'📍 เปิดใน Google Maps',soft:'เครื่องดื่มไม่มีแอลกอฮอล์',beer:'เบียร์',whiskey:'วิสกี้และสุรา',shots:'ช็อต',cocktails:'ค็อกเทล (กดดูส่วนผสม)'},
- cn:{free:'🎱 台球免费',map:'📍 在 Google 地图中打开',soft:'无酒精饮料',beer:'啤酒',whiskey:'威士忌及烈酒',shots:'短饮',cocktails:'鸡尾酒（点击查看配料）'}
+ en:{free:'🎱 Free Billiard',map:'📍 Open in Google Maps',soft:'Soft Drinks',beer:'Beer',whiskey:'Whiskey',shots:'Shots',cocktails:'Cocktails (tap to see ingredients)',ageTitle:'21+ Only',ageText:'You must be 21 years old or older to enter this site',ageYes:'Yes, I am 21+',ageNo:'No'},
+ ru:{free:'🎱 Бильярд бесплатно',map:'📍 Открыть в Google Maps',soft:'Безалкогольные напитки',beer:'Пиво',whiskey:'Виски и крепкий алкоголь',shots:'Шоты',cocktails:'Коктейли (нажмите для состава)',ageTitle:'Только 21+',ageText:'Вам должно быть 21 год или больше для входа',ageYes:'Да, мне есть 21+',ageNo:'Нет'},
+ th:{free:'🎱 เล่นพูลฟรี',map:'📍 เปิดใน Google Maps',soft:'เครื่องดื่มไม่มีแอลกอฮอล์',beer:'เบียร์',whiskey:'วิสกี้และสุรา',shots:'ช็อต',cocktails:'ค็อกเทล (กดดูส่วนผสม)',ageTitle:'สำหรับอายุ 21 ปีขึ้นไป',ageText:'คุณต้องมีอายุ 21 ปีขึ้นไปเพื่อเข้าสู่เว็บไซต์นี้',ageYes:'ใช่ ฉันอายุ 21 ปีขึ้นไป',ageNo:'ไม่'},
+ cn:{free:'🎱 台球免费',map:'📍 在 Google 地图中打开',soft:'无酒精饮料',beer:'啤酒',whiskey:'威士忌及烈酒',shots:'短饮',cocktails:'鸡尾酒（点击查看配料）',ageTitle:'仅限21岁以上',ageText:'您必须年满21岁才能进入本网站',ageYes:'是的，我已满21岁',ageNo:'否'}
 };
 
 const data={
- soft:[
-  ['Water',30],['M-150',50],['Coca-Cola',50],['Coke Light',50],['Coke Diet',50],['Schweppes Lemon',50],
-  ['Soda Water',50],['Tonic Water',50],
-  ['Orange Juice',70],['Apple Juice',70],['Pineapple Juice',70],['Cranberry Juice',70],
-  ['Red Bull',100]
- ],
- beer:[
-  ['Leo',80],['Chang',80],['Tiger',80],['Heineken',80],
-  ['Singha',100],['San Mig Light',100],
-  ['Spy',150],['Smirnoff Ice',150],
-  ['Strongbow Apple Cider',180],['Kopparberg (Mix Fruit / Strawberry & Lime)',250]
- ],
- whiskey:[
-  ['Sansom',80],['Hongtong',80],
-  ['Bacardi',160],['Malibu',160],
-  ['Vodka',180],['Gin',180],['Bombay',180],
-  ['Jack Daniel’s',180],['Black Label',180],['Red Label',180],['Captain Morgan',180],
-  ['Chivas Regal',180],['Jameson',180],['Ballantine’s',180],
-  ['Blend 225',225]
- ],
- shots:[
-  ['Sansom',60],
-  ['Vodka',150],['Tequila',150],['Tequila (Premium)',160],
-  ['Tequila Rose',160],['Sambuca',160],['Black Sambuca',160],['Jägermeister',160],
-  ['B-52',180]
- ],
- cocktails:[
-  ['Margarita','Tequila, Triple Sec, Lime'],
-  ['Mai Tai','White rum, Dark rum, Curaçao, Orgeat, Lime'],
-  ['Piña Colada','White rum, Coconut cream, Pineapple'],
-  ['Blue Hawaii','White rum, Blue Curaçao, Pineapple, Lemon'],
-  ['Black Russian','Vodka, Coffee liqueur'],
-  ['White Russian','Vodka, Coffee liqueur, Cream'],
-  ['Cuba Libre','White rum, Cola, Lime'],
-  ['Long Island Iced Tea','Vodka, Gin, Rum, Tequila, Triple sec, Cola'],
-  ['Tequila Sunrise','Tequila, Orange juice, Grenadine'],
-  ['B-52','Coffee liqueur, Irish cream, Triple sec'],
-  ['Tom Collins','Gin, Lemon, Sugar syrup, Soda']
- ]
+ soft:[['Water',30],['M-150',50],['Coca-Cola',50],['Coke Light',50],['Coke Diet',50],['Schweppes Lemon',50],['Soda Water',50],['Tonic Water',50],['Orange Juice',70],['Apple Juice',70],['Pineapple Juice',70],['Cranberry Juice',70],['Red Bull',100]],
+ beer:[['Leo',80],['Chang',80],['Tiger',80],['Heineken',80],['Singha',100],['San Mig Light',100],['Spy',150],['Smirnoff Ice',150],['Strongbow Apple Cider',180],['Kopparberg (Mix Fruit / Strawberry & Lime)',250]],
+ whiskey:[['Sansom',80],['Hongtong',80],['Bacardi',160],['Malibu',160],['Vodka',180],['Gin',180],['Bombay',180],['Jack Daniel’s',180],['Black Label',180],['Red Label',180],['Captain Morgan',180],['Chivas Regal',180],['Jameson',180],['Ballantine’s',180],['Blend 225',225]],
+ shots:[['Sansom',60],['Vodka',150],['Tequila',150],['Tequila (Premium)',160],['Tequila Rose',160],['Sambuca',160],['Black Sambuca',160],['Jägermeister',160],['B-52',180]],
+ cocktails:[['Margarita','Tequila, Triple Sec, Lime'],['Mai Tai','White rum, Dark rum, Curaçao, Orgeat, Lime'],['Piña Colada','White rum, Coconut cream, Pineapple'],['Blue Hawaii','White rum, Blue Curaçao, Pineapple, Lemon'],['Black Russian','Vodka, Coffee liqueur'],['White Russian','Vodka, Coffee liqueur, Cream'],['Cuba Libre','White rum, Cola, Lime'],['Long Island Iced Tea','Vodka, Gin, Rum, Tequila, Triple sec, Cola'],['Tequila Sunrise','Tequila, Orange juice, Grenadine'],['B-52','Coffee liqueur, Irish cream, Triple sec'],['Tom Collins','Gin, Lemon, Sugar syrup, Soda']]
 };
 
 function render(){
  document.querySelector('.note').textContent=i18n[lang].free;
  document.querySelector('.map-btn').textContent=i18n[lang].map;
- const menu=document.getElementById('menu');
- menu.innerHTML='';
+ document.getElementById('ageTitle').textContent=i18n[lang].ageTitle;
+ document.getElementById('ageText').textContent=i18n[lang].ageText;
+ document.getElementById('ageYes').textContent=i18n[lang].ageYes;
+ document.getElementById('ageNo').textContent=i18n[lang].ageNo;
+ const menu=document.getElementById('menu');menu.innerHTML='';
  Object.keys(data).forEach(key=>{
   const s=document.createElement('div');s.className='section';
   s.innerHTML=`<h2>${i18n[lang][key]}</h2>`;
@@ -98,9 +86,7 @@ function render(){
    if(key==='cocktails'){
     const c=document.createElement('div');c.className='cocktail';
     c.innerHTML=`<div class="cocktail-name"><span>${i[0]}</span><span>180 THB</span></div><div class="cocktail-desc">${i[1]}</div>`;
-    c.querySelector('.cocktail-name').onclick=()=>{
-     const d=c.querySelector('.cocktail-desc');d.style.display=d.style.display==='block'?'none':'block';
-    };
+    c.querySelector('.cocktail-name').onclick=()=>{const d=c.querySelector('.cocktail-desc');d.style.display=d.style.display==='block'?'none':'block'};
     s.appendChild(c);
    } else {
     const r=document.createElement('div');r.className='item';
@@ -112,7 +98,11 @@ function render(){
  });
 }
 
-function setLang(l,el){lang=l;document.querySelectorAll('.lang button').forEach(b=>b.classList.remove('active'));el.classList.add('active');render();}
+function setLang(l,el){lang=l;document.querySelectorAll('.lang button').forEach(b=>b.classList.remove('active'));el.classList.add('active');render()}
+function confirmAge(){localStorage.setItem('ageConfirmed','yes');document.getElementById('ageGate').style.display='none'}
+function denyAge(){window.location.href='https://google.com'}
+
+if(!localStorage.getItem('ageConfirmed')){document.getElementById('ageGate').style.display='flex'}
 render();
 </script>
 
